Update the README

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,30 @@
-== README
+# Marketdown
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+[Live demo](https://marketdown.herokuapp.com)
 
-Things you may want to cover:
+This is a Rails 4.2.1 app. Tested with Ruby 2.2.0.
 
-* Ruby version
+It's a demo to test what implementing a Rails app might look like if we used the DCI pattern. In this app, we use the [Surrounded gem](https://github.com/saturnflyer/surrounded) for this.
 
-* System dependencies
+You can log in (there's no password, just give a name). You can create books written in Markdown. You can then also purchase books others have written.
 
-* Configuration
+## Development
 
-* Database creation
+After you clone the app, install the gems and then set up the database:
 
-* Database initialization
+```
+bundle install --path=.bundle
+bundle exec rake db:create
+bundle exec rake db:migrate
+```
 
-* How to run the test suite
+## Deployment
 
-* Services (job queues, cache servers, search engines, etc.)
+You can deploy to Heroku easily.
 
-* Deployment instructions
+```
+heroku apps:create your-marketdown-instance
+git push && git push heroku
+heroku open --app your-marketdown-instance
+```
 
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
